feat(Core): Migrating "Twist Robot for better Mopping" from Quirks to Capability
