# backend/lib/webserver/capabilityRouters/doc/SimpleToggleCapabilityRouter.openapi.json
@@ -614,5 +614,82 @@
         }
       }
     }
+  },
+  "/api/v2/robot/capabilities/MopGapControlCapability": {
+    "get": {
+      "tags": [
+        "MopGapControlCapability"
+      ],
+      "summary": "Get gap mopping setting",
+      "responses": {
+        "200": {
+          "description": "Ok",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "enabled": {
+                    "type": "boolean"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "put": {
+      "tags": [
+        "MopGapControlCapability"
+      ],
+      "summary": "Set gap mopping setting",
+      "requestBody": {
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "action": {
+                  "type": "string",
+                  "enum": [
+                    "enable",
+                    "disable"
+                  ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "responses": {
+        "200": {
+          "$ref": "#/components/responses/200"
+        },
+        "400": {
+          "$ref": "#/components/responses/400"
+        }
+      }
+    }
+  },
+  "/api/v2/robot/capabilities/MopGapControlCapability/properties": {
+    "get": {
+      "tags": [
+        "MopGapControlCapability"
+      ],
+      "summary": "Get various capability-related properties",
+      "responses": {
+        "200": {
+          "description": "Ok",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object"
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
